scrollbar fix on chrome

--- a/client/src/components/EmailPage/styles/EmailPage.module.css
+++ b/client/src/components/EmailPage/styles/EmailPage.module.css
@@ -5,5 +5,4 @@
 
 .container {
   flex: 1;
-  overflow: scroll;
 }
